// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-jPGeSq kPSsRn"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-jPGeSq kPSsRn"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-jPGeSq kPSsRn"
>
  <span
    className="sc-hsfgio fiNUoB"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-jPGeSq kPSsRn"
>
  <div
    className="sc-uoHVL pkvkW"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-jPGeSq IOvHK"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-jPGeSq lalHNq"
  size="small"
/>
`;
